--- a/sections/banner-landing.liquid
+++ b/sections/banner-landing.liquid
@@ -8,20 +8,9 @@
 {%- assign active_image = blank -%}
 {%- assign active_url = blank -%}
 
-{%- assign banners = shop.metafields.banner_landing.banners.items -%}
+{%- assign banners = shop.metafields.banner_landing.banners.value -%}
 
 <!-- Debug: {{ banners | json }} -->
-
-<script>
-  try {
-    console.log('Banner landing metafield:', {{ shop.metafields.banner_landing }});
-    console.log('Product metafields:', {{ product.metafields.custom.model_size }});
-    console.log('Banners object:', {{ shop.metafields.banner_landing.banners }});
-    console.log('Banners items:', {{ banners }});
-  } catch (e) {
-    console.log('Debug error:', e.message);
-  }
-</script>
 
 {%- if banners -%}
   {%- for banner in banners -%}
@@ -36,14 +25,27 @@
     {%- endif -%}
   {%- endfor -%}
 {%- endif -%}
-
 {%- if active_image -%}
   {%- if active_url -%}
-    <a href="{{ active_image | image_url }}" class="banner-landing__link">
-      <img src="{{ active_image | image_url }}" alt="{{ active_image.alt | default: 'Banner image' }}" width="{{ active_image.width }}" height="{{ active_image.height }}" style="width: 100%; height: auto;" class="banner-landing__image">
+    <a href="{{ active_url }}" class="banner-landing__link">
+      <img
+        src="{{ active_image }}"
+        alt="{{ active_image.alt | default: 'Banner image' }}"
+        width="{{ active_image.width }}"
+        height="{{ active_image.height }}"
+        style="width: 100%; height: auto;"
+        class="banner-landing__image"
+      >
     </a>
   {%- else -%}
-    <img src="{{ active_image | image_url }}" alt="{{ active_image.alt | default: 'Banner image' }}" width="{{ active_image.width }}" height="{{ active_image.height }}" style="width: 100%; height: auto;" class="banner-landing__image">
+    <img
+      src="{{ active_image | image_url }}"
+      alt="{{ active_image.alt | default: 'Banner image' }}"
+      width="{{ active_image.width }}"
+      height="{{ active_image.height }}"
+      style="width: 100%; height: auto;"
+      class="banner-landing__image"
+    >
   {%- endif -%}
 {%- endif -%}
 
