--- a/sections/banner-landing.liquid
+++ b/sections/banner-landing.liquid
@@ -19,34 +19,19 @@
     {%- endcapture -%}
 
     {%- if is_visible == 'true' -%}
-      {%- assign active_image = banner.image -%}
-      {%- assign active_url = banner.url -%}
+      <a href="{{ active_url }}" class="banner-landing__link">
+        <img
+          src="{{ banner.image }}"
+          alt="{{ banner.alt | default: 'Banner image' }}"
+          width="{{ banner.width }}"
+          height="{{ banner.height }}"
+          style="width: 100%; height: auto;"
+          class="banner-landing__image"
+        >
+      </a>
       {%- break -%}
     {%- endif -%}
   {%- endfor -%}
-{%- endif -%}
-{%- if active_image -%}
-  {%- if active_url -%}
-    <a href="{{ active_url }}" class="banner-landing__link">
-      <img
-        src="{{ active_image }}"
-        alt="{{ active_image.alt | default: 'Banner image' }}"
-        width="{{ active_image.width }}"
-        height="{{ active_image.height }}"
-        style="width: 100%; height: auto;"
-        class="banner-landing__image"
-      >
-    </a>
-  {%- else -%}
-    <img
-      src="{{ active_image | image_url }}"
-      alt="{{ active_image.alt | default: 'Banner image' }}"
-      width="{{ active_image.width }}"
-      height="{{ active_image.height }}"
-      style="width: 100%; height: auto;"
-      class="banner-landing__image"
-    >
-  {%- endif -%}
 {%- endif -%}
 
 {%- schema -%}
