--- a/sections/hero-banner.liquid
+++ b/sections/hero-banner.liquid
@@ -159,7 +159,7 @@
   {%- if section.settings.enable_transparent_header -%}
     .hero-banner .hero__media.media--overlay:before {
       content: '';
-      position: absolute;
+      position: fixed;
       inset-block-start: 0;
       inset-inline-start: 0;
       width: 100%;
