--- a/snippets/account-dashboard.liquid
+++ b/snippets/account-dashboard.liquid
@@ -1,5 +1,5 @@
 {{- 'account-dashboard.css' | asset_url | stylesheet_tag -}}
-{%- style -%}t
+{%- style -%}
   #shopify-section-{{ section.id }} > div {
     padding-block-start: calc(var(--section-spacing-unit-size) * {{ section.settings.spacing_top }});
     padding-block-end: calc(var(--section-spacing-unit-size) * {{ section.settings.spacing_bottom }});
